--- a/app.yaml
+++ b/app.yaml
@@ -9,21 +9,31 @@ handlers:
   static_files: favicon.ico
   upload: favicon\.ico
 
-- url: /../css/home\.css
-  static_files: ../css/home.css
-  upload: ../css/home\.css
+- url: /css
+  static_dir: css
 
-- url: /allscript\.js
-  static_files: allscript.js
-  upload: allscript\.js
+- url: /photos
+  static_dir: photos
 
-- url: /../photos/indexcover\.jpg
-  static_files: ../photos/indexcover.jpg
-  upload: ../photos/indexcover\.jpg
-
-- url: /../html/title\.html
-  static_files: ../html/title.html
-  upload: ../html/title\.html
+# - url: /../css/*\.css
+#   static_files: ../css/*.css
+#   upload: ../css/*\.css
+#
+# - url: /allscript\.js
+#   static_files: allscript.js
+#   upload: allscript\.js
+#
+# - url: /../photos/indexcover\.jpg
+#   static_files: ../photos/indexcover.jpg
+#   upload: ../photos/indexcover\.jpg
+#
+# - url: /../html/title\.html
+#   static_files: ../html/title.html
+#   upload: ../html/title\.html
+#
+# - url: /.*
+#   static_dir: css
+#   script: main.app
 
 - url: .*
   script: main.app
